// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`onPreBootstrap correctly initializes custom options 1`] = `
Object {
  "_pathPrefix": "",
  "_plugin": "gatsby-plugin-postbuild",
  "_public": "/virtual/project/public",
  "_root": "/virtual/project",
  "allowSymbols": true,
  "enabled": true,
  "purgecss": Object {
    "fontFace": false,
    "keyframes": false,
    "rejected": false,
    "variables": false,
  },
  "report": false,
  "reportConsole": true,
}
`;

exports[`onPreBootstrap correctly initializes default options 1`] = `
Object {
  "_pathPrefix": "",
  "_plugin": "gatsby-plugin-postbuild",
  "_public": "/virtual/project/public",
  "_root": "/virtual/project",
  "allowSymbols": false,
  "enabled": true,
  "purgecss": Object {
    "fontFace": false,
    "keyframes": false,
    "rejected": true,
    "variables": false,
  },
  "report": true,
  "reportConsole": true,
}
`;
